--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "emoji-picker-element": "^1.26.1",
+    "marked": "^15.0.7",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
