--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,6 +24,7 @@ jobs:
         run: |
           npm install
           npm run build
+          cp dist/index.html dist/404.html  # 404.html 복사
 
       # 4) bmc-00.github.io 레포 클론
       - name: Clone bmc-00.github.io
