--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.7.9",
     "emoji-picker-element": "^1.26.1",
+    "lodash.debounce": "^4.0.8",
     "marked": "^15.0.7",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
